# to_do_list_api

./: .env_example  .gitignore  README.md  pyproject.toml
common/db/: db.py
common/db/sql/: base_banco.sql  get_users.sql  insert_user.sql  update_name_email.sql
common/security/: security.py
common/settings/: login.py  settings.py
logs/: logs.md
to_do_list/: main.py
to_do_list/routers/: router_auth.py  router_home.py  router_users.py
to_do_list/schemas/: schema_generico.py  schema_users.py
utils/: files.py  log.py
